<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="noData"
            type="boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#F7F9FA"
            android:orientation="horizontal"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/products_search_box"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:enabled="false"
                android:gravity="start|center"
                android:hint="@string/search_currency_hint"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/products_search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:contentDescription="@string/cd_search_button"
                app:srcCompat="@drawable/ic_search" />

        </LinearLayout>

        <TextView
            android:id="@+id/loading_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/high_emphasis_text"
            app:visibleGone="@{isLoading &amp;&amp; noData}" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:visibleGone="@{!isLoading || !noData}">

            <TextView
                android:id="@+id/noDataView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/no_data"
                android:textAlignment="center"
                android:textColor="@color/high_emphasis_text"
                app:visibleGone="@{noData}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/currency_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_currency_list"
                app:layoutManager="LinearLayoutManager"
                app:visibleGone="@{!noData}" />

        </FrameLayout>

    </LinearLayout>
</layout>